# alns-rust-test

./: Dockerfile  README.md  er.name
alns/: Cargo.toml  Dockerfile  docker-compose.yml
alns/src/: main.rs  test.rs
alns/src/constraint/: constraint.rs  mod.rs  pattern_constraint.rs
alns/src/coverage/: coverage.rs  horizontal_coverage.rs  mod.rs
alns/src/engine/: alns.rs  cost.rs  mod.rs  preprocessing.rs
alns/src/executor/: formula_executor.rs  mod.rs
alns/src/input/: input.rs
alns/src/output/: output.xlsx
alns/src/resource/dump/: data_dummy.json
alns/src/shift/: mod.rs  shift.rs  shift_group.rs
alns/src/solution/: solution.rs
alns/src/staff/: mod.rs  staff.rs  staff_group.rs
alns/src/utils/: date.rs  hashing.rs  json.rs  mod.rs  random.rs  to_excel.rs
alns/src/violation/: rule.rs
