[package]
name = "alns"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
bcrypt = "0.15.1"
dotenv = "0.15.0"
axum-macros = "0.4.1"
jsonwebtoken = "9.3.0"
tokio = { version = "1.37.0", features = ["full"] }

rand = "0.8"