[package]
name = "alns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
bcrypt = "0.15.1"
dotenv = "0.15.0"
axum-macros = "0.4.1"
jsonwebtoken = "9.3.0"
tokio = { version = "1.37.0", features = ["full"] }

rand = "0.8"
xlsxwriter = "0.6.1"
regex = "1.11.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"